--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.1.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.8.0",
+    "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
