--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "i18next": "^23.12.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^15.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
