--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tooling/scripts/generate-api-types.sh && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "coverage": "vitest --coverage"
+    "coverage": "vitest --coverage",
+    "gen:types": "tooling/scripts/generate-api-types.sh",
+    "postbuild": "tooling/scripts/upload-sourcemaps.sh"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
@@ -34,6 +36,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "jsdom": "^24.1.1",
+    "openapi-typescript": "^7.3.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
