--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@tanstack/react-query": "^5.51.21",
     "i18next": "^23.12.2",
     "next": "14.2.5",
     "react": "^18",
