--- a/package.json
+++ b/package.json
@@ -15,18 +15,39 @@
     "ds": "ts-node tooling/cli/create-ds.js",
     "ds:adapter": "ts-node tooling/cli/add-adapter.js",
     "core:domain": "ts-node tooling/cli/create-domain.js",
-    "hook": "ts-node tooling/cli/create-hook.js"
+    "hook": "ts-node tooling/cli/create-hook.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "serve-storybook": "storybook start"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
+    "clsx": "^2.1.1",
     "i18next": "^23.12.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.0"
+    "react-i18next": "^15.0.0",
+    "remixicon": "^4.3.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
+    "@inquirer/prompts": "^5.3.8",
+    "@storybook/addon-essentials": "^8.1.7",
+    "@storybook/addon-interactions": "^8.1.7",
+    "@storybook/addon-links": "^8.1.7",
+    "@storybook/addon-onboarding": "^8.1.7",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/blocks": "^8.1.7",
+    "@storybook/manager-api": "^8.1.9",
+    "@storybook/nextjs": "^8.1.7",
+    "@storybook/react": "^8.1.7",
+    "@storybook/test": "^8.1.7",
+    "@storybook/theming": "^8.1.9",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.1.0",
@@ -47,6 +68,7 @@
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "storybook": "^8.2.7",
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
