--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -41,14 +41,7 @@ jobs:
           node-version: 20
       - run: npm ci
       - name: Run unit/integration test
-        run: npm run coverage
+        run: npm run test
       - name: Setup tmate session for debugging
         uses: mxschmitt/action-tmate@v3
         if: ${{ failure() && inputs.debug_enabled }}
-      - name: Upload unit/integration tests coverage
-        uses: codecov/codecov-action@v4
-        with:
-          files: coverage/clover.xml
-          token: ${{ secrets.CODECOV_TOKEN  }}
-      - name: Clean coverage
-        run: rm -rf coverage
