--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@inquirer/prompts": "^5.3.8",
+    "@next/bundle-analyzer": "^14.2.5",
     "@storybook/addon-essentials": "^8.1.7",
     "@storybook/addon-interactions": "^8.1.7",
     "@storybook/addon-links": "^8.1.7",
