--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/react": "^8.1.7",
     "@storybook/test": "^8.1.7",
     "@storybook/theming": "^8.1.9",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.1.0",
@@ -68,6 +69,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.2.7",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
