--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "i18next": "^23.12.2",
     "next": "14.2.5",
+    "posthog-js": "^1.154.5",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.0",
