--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/test": "^8.1.7",
     "@storybook/theming": "^8.1.9",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.1.0",
