--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 ######################################## ONLYDUST ########################################
 
+NEXT_PUBLIC_METADATA_ASSETS_S3_BUCKET=
 NEXT_PUBLIC_ONLYDUST_API_BASEPATH=
 
 ######################################## AUTH0 ########################################
