--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ######################################## ONLYDUST ########################################
 
 NEXT_PUBLIC_METADATA_ASSETS_S3_BUCKET=
+NEXT_PUBLIC_CLOUDFLARE_RESIZE_PREFIX=
 NEXT_PUBLIC_ONLYDUST_API_BASEPATH=
 
 ######################################## AUTH0 ########################################
