--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-i18next": "^15.0.0",
     "remixicon": "^4.3.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1"
   },
