--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
     "clsx": "^2.1.1",
+    "highcharts": "^11.4.6",
+    "highcharts-react-official": "^3.2.1",
     "i18next": "^23.12.2",
     "next": "14.2.5",
     "posthog-js": "^1.154.5",
