--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^5.0.0",
     "vitest": "^2.0.5"
   }
 }
