--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@fillout/react": "^1.1.2",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
     "clsx": "^2.1.1",
