--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "test": "vitest",
     "gen:types": "tooling/scripts/generate-api-types.sh",
     "postbuild": "tooling/scripts/upload-sourcemaps.sh",
-    "component": "ts-node tooling/cli/create-component.js",
-    "ds": "ts-node tooling/cli/create-ds.js",
-    "ds:adapter": "ts-node tooling/cli/add-adapter.js",
-    "core:domain": "ts-node tooling/cli/create-domain.js",
-    "hook": "ts-node tooling/cli/create-hook.js",
+    "cli": "ts-node tooling/cli/cli.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "serve-storybook": "storybook start"
