--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.3.24",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
