--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fillout/react": "^1.1.2",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-table": "^8.20.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
