--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "posthog-js": "^1.154.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-flagpack": "^2.0.5",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
     "react-use": "^17.5.1",
