--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.12.2",
+    "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "posthog-js": "^1.154.5",
     "react": "^18",
