--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.2.7",
+    "storybook-dark-mode": "^4.0.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
