--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@inquirer/prompts": "^5.3.8",
     "@next/bundle-analyzer": "^14.2.5",
+    "@storybook/addon-designs": "^8.0.3",
     "@storybook/addon-essentials": "^8.1.7",
     "@storybook/addon-interactions": "^8.1.7",
     "@storybook/addon-links": "^8.1.7",
