wip(project): description

--- a/shared/panels/project-sidepanel/project-sidepanel.en.json
+++ b/shared/panels/project-sidepanel/project-sidepanel.en.json
@@ -1,8 +1,8 @@
 {
   "seeProject": "See project",
   "grant": "Grant",
-  "link": {
-    "title": "Links"
+  "description": {
+    "title": "Description"
   },
   "language": {
     "title": "Language"
