wip(project): information

--- a/shared/panels/project-sidepanel/project-sidepanel.en.json
+++ b/shared/panels/project-sidepanel/project-sidepanel.en.json
@@ -1,6 +1,9 @@
 {
   "seeProject": "See project",
   "grant": "Grant",
+  "information": {
+    "title": "Information"
+  },
   "description": {
     "title": "Description"
   },
