wip(project): languages

--- a/shared/panels/project-sidepanel/project-sidepanel.en.json
+++ b/shared/panels/project-sidepanel/project-sidepanel.en.json
@@ -7,8 +7,8 @@
   "description": {
     "title": "Description"
   },
-  "language": {
-    "title": "Language"
+  "languages": {
+    "title": "Languages"
   },
   "categories": {
     "title": "Categories"
