refactor(project): contributors -> top contributors

--- a/shared/panels/project-sidepanel/project-sidepanel.en.json
+++ b/shared/panels/project-sidepanel/project-sidepanel.en.json
@@ -28,8 +28,8 @@
   "lead": {
     "title": "Project lead"
   },
-  "contributors": {
-    "title": "Contributors"
+  "topContributors": {
+    "title": "Top Contributors"
   },
   "sponsors": {
     "title": "Sponsors"
