refactor(project): sponsors -> programs

--- a/shared/panels/project-sidepanel/project-sidepanel.en.json
+++ b/shared/panels/project-sidepanel/project-sidepanel.en.json
@@ -31,8 +31,8 @@
   "topContributors": {
     "title": "Top Contributors"
   },
-  "sponsors": {
-    "title": "Sponsors"
+  "programs": {
+    "title": "Programs"
   },
   "financials": {
     "title": "Financials",
