--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@fillout/react": "^1.1.2",
+    "@floating-ui/react": "^0.26.23",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
