--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "@fillout/react": "^1.1.2",
     "@floating-ui/react": "^0.26.23",
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
@@ -35,13 +36,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-flagpack": "^2.0.5",
+    "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@inquirer/prompts": "^5.3.8",
