replace wording and re order project KPI

--- a/shared/panels/project-sidepanel/project-sidepanel.en.json
+++ b/shared/panels/project-sidepanel/project-sidepanel.en.json
@@ -16,13 +16,13 @@
   "kpi": {
     "title": "KPI",
     "activeDev": {
-      "title": "Active dev"
+      "title": "Devs Active"
     },
     "prMerged": {
       "title": "PR Merged"
     },
-    "rewards": {
-      "title": "Rewards"
+    "devsOnboarded": {
+      "title": "Onboarded"
     }
   },
   "lead": {
