--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "@fillout/react": "^1.1.2",
     "@floating-ui/react": "^0.26.23",
+    "@highcharts/map-collection": "^2.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.21",
