--- a/app/manage-projects/_translations/manage-projects.en.json
+++ b/app/manage-projects/_translations/manage-projects.en.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "title": "Maintainer",
+    "title": "Manage Projects",
     "ctaSubmitProject": "Submit a project"
   },
   "projectsTable": {
