--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -1,6 +1,43 @@
 {
   "title": "Modify Project",
   "globalInformation": {
-    "title": "Global Information"
+    "title": "Global Information",
+    "name": {
+      "label": "Project name",
+      "placeholder": "Name"
+    },
+    "shortDescription": {
+      "label": "Short description",
+      "placeholder": "Short description"
+    },
+    "longDescription": {
+      "label": "Long description",
+      "placeholder": "Long description"
+    },
+    "logo": {
+      "label": "Project visual",
+      "buttonLabel": "Upload a file"
+    },
+    "leads": {
+      "label": "Project lead",
+      "placeholder": "Project lead"
+    },
+    "ecosystems": {
+      "label": "Ecosystems",
+      "placeholder": "Ecosystems"
+    },
+    "categories": {
+      "label": "Categories",
+      "placeholder": "Categories"
+    },
+    "rewardsSettings": {
+      "label": "Rewardable contributions",
+      "since": "Since",
+      "items": {
+        "pullRequests": "Pull requests",
+        "issue": "Issues",
+        "codeReviews": "Code reviews"
+      }
+    }
   }
 }
