--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -1,8 +1,8 @@
 {
   "title": "Modify Project",
   "messages": {
-    "success": "Project edited successfully",
-    "error": "An error occurred while updating the project"
+    "success": "Project edited successfully.",
+    "error": "An error occurred while updating the project."
   },
   "globalInformation": {
     "title": "Global Information",
