--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -22,10 +22,6 @@
       "label": "Project visual",
       "buttonLabel": "Upload a file"
     },
-    "leads": {
-      "label": "Project lead",
-      "placeholder": "Project lead"
-    },
     "ecosystems": {
       "label": "Ecosystems",
       "placeholder": "Ecosystems"
@@ -43,5 +39,8 @@
         "codeReviews": "Code reviews"
       }
     }
+  },
+  "projectLeads": {
+    "title": "Project lead"
   }
 }
