Add lead update in project panel

--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -41,6 +41,8 @@
     }
   },
   "projectLeads": {
-    "title": "Project lead"
+    "title": "Project lead",
+    "me": "You",
+    "invited": "Pending"
   }
 }
