More info section

--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -45,5 +45,18 @@
     "title": "Project lead",
     "you": "You",
     "invited": "Pending"
+  },
+  "moreInfo": {
+    "title": "More info",
+    "emptyLinkLabel": "Link {{count}}",
+    "addLink": "Add a link",
+    "inputs": {
+      "link": {
+        "placeholder": "Link"
+      },
+      "label": {
+        "placeholder": "Label"
+      }
+    }
   }
 }
