add label autocomplete

--- a/app/manage-projects/[projectSlug]/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/manage-project-detail.en.json
@@ -25,7 +25,10 @@
     },
     "columns": {
       "contributorName": "Contributor name",
-      "labels": "Labels",
+      "labels": {
+        "title": "Labels",
+        "placeholder": "Select labels"
+      },
       "languages": "Languages",
       "ecosystems": "Ecosystems",
       "country": "Country",
