Add github card component

--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -50,6 +50,9 @@
     "you": "You",
     "invited": "Pending"
   },
+  "repositories": {
+    "title": "Repositories"
+  },
   "moreInfo": {
     "title": "More info",
     "emptyLinkLabel": "Link {{count}}",
