Add search and github manage

--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -70,7 +70,9 @@
   "addRepoPanel": {
     "title": "Add a repo",
     "repositories": {
-      "title": "Repositories"
+      "title": "Repositories",
+      "search": "Search for a repository",
+      "manage": "Manage"
     }
   }
 }
