--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -73,6 +73,14 @@
       "title": "Repositories",
       "search": "Search for a repository",
       "manage": "Manage"
+    },
+    "organizations": {
+      "title": "Organizations",
+      "search": "Search for a organizations",
+      "manage": "Manage",
+      "refresh": "Refresh",
+      "installed": "Installed organizations",
+      "available": "Available organizations"
     }
   }
 }
