[FEATURE]: maintainer financial section (#283)
Co-authored-by: Mehdi Hamri <143011364+pixelfact@users.noreply.github.com>

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -1,4 +1,20 @@
 {
+  "financial": {
+    "title": "Financial",
+    "buttons": {
+      "budgetAvailable": "Budget",
+      "budgetChart": "Chart",
+      "seeTransactions": "See transactions",
+      "modifyProject": "Modify project"
+    }
+  },
+  "activity": {
+    "title": "Activity",
+    "buttons": {
+      "seeActivity": "See activity",
+      "seeTransactions": "See transactions"
+    }
+  },
   "filters": {
     "titles": {
       "project": "Projects filters",
