Add new issues section + view selector

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -11,8 +11,8 @@
   "activity": {
     "title": "Activity",
     "buttons": {
-      "seeActivity": "See activity",
-      "seeTransactions": "See transactions"
+      "contributors": "Contributors",
+      "issues": "Issues"
     }
   },
   "filters": {
