--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -13,6 +13,15 @@
     "buttons": {
       "contributors": "Contributors",
       "issues": "Issues"
+    },
+    "kanban": {
+      "columns": {
+        "notAssigned": "Not assigned",
+        "inProgress": "In Progress",
+        "toReview": "To Review",
+        "done": "Done",
+        "archive": "Archive"
+      }
     }
   },
   "filters": {
