--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -67,6 +67,10 @@
     "rows": {
       "languages": "{{count}} languages",
       "ecosystems": "{{count}} ecosystems"
+    },
+    "toast": {
+      "success": "Contributor label changed successfully.",
+      "error": "Error changing contributor label."
     }
   }
 }
