feat(modal): manage applicant accordion

--- a/shared/modals/manage-applicants-modal/_translations/manage-applicants.en.json
+++ b/shared/modals/manage-applicants-modal/_translations/manage-applicants.en.json
@@ -1,5 +1,8 @@
 {
   "title": "Applicants",
+  "projectContributors": "Project contributors",
+  "newContributors": "New contributors",
+  "refused": "Refused",
   "table": {
     "columns": {
       "contributor": "Contributor",
