bing contributor panel

--- a/shared/modals/manage-applicants-modal/_translations/manage-applicants.en.json
+++ b/shared/modals/manage-applicants-modal/_translations/manage-applicants.en.json
@@ -2,7 +2,7 @@
   "title": "Applicants",
   "projectContributors": "Project contributors",
   "newContributors": "New contributors",
-  "refused": "Refused",
+  "ignored": "Ignored",
   "table": {
     "columns": {
       "contributor": "Contributor",
