handle buttons in table and profile side panel

--- a/shared/modals/manage-applicants-modal/_translations/manage-applicants.en.json
+++ b/shared/modals/manage-applicants-modal/_translations/manage-applicants.en.json
@@ -33,6 +33,10 @@
     "toast": {
       "success": "Contributor label changed successfully.",
       "error": "Error changing contributor label."
+    },
+    "actions": {
+      "ignore": "Ignore",
+      "assign": "Assign"
     }
   }
 }
