add action columns to reward table

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -92,9 +92,12 @@
       "to": "To",
       "contributions": "Contributions",
       "amount": "Amount",
-      "status": "Status"
+      "status": "Status",
+      "actions": "Actions"
     },
-    "rows": {},
+    "rows": {
+      "cancelReward": "Cancel"
+    },
     "rewardsCount": "Rewards"
   }
 }
