handle cancel reward

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -98,6 +98,12 @@
     "rows": {
       "cancelReward": "Cancel"
     },
-    "rewardsCount": "Rewards"
+    "rewardsCount": "Rewards",
+    "toast": {
+      "cancelReward": {
+        "success": "Reward canceled successfully.",
+        "error": "Error canceling reward."
+      }
+    }
   }
 }
