Handle rewards statuses and cancel reward (#392)

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -92,9 +92,18 @@
       "to": "To",
       "contributions": "Contributions",
       "amount": "Amount",
-      "status": "Status"
+      "status": "Status",
+      "actions": "Actions"
     },
-    "rows": {},
-    "rewardsCount": "Rewards"
+    "rows": {
+      "cancelReward": "Cancel"
+    },
+    "rewardsCount": "Rewards",
+    "toast": {
+      "cancelReward": {
+        "success": "Reward canceled successfully.",
+        "error": "Error canceling reward."
+      }
+    }
   }
 }
