--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -96,7 +96,9 @@
       "actions": "Actions"
     },
     "rows": {
-      "cancelReward": "Cancel"
+      "cancelReward": "Cancel",
+      "contributionsCount_one": "{{count}} contribution",
+      "contributionsCount_other": "{{count}} contributions"
     },
     "rewardsCount": "Rewards",
     "toast": {
