fix(*): rename section

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -8,8 +8,8 @@
       "modifyProject": "Modify project"
     }
   },
-  "contributions": {
-    "title": "Contributions",
+  "activity": {
+    "title": "Activity",
     "buttons": {
       "contributors": "Contributors",
       "contributions": "Contributions",
