refactor(activity): renamed archive column

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -21,7 +21,7 @@
         "inProgress": "In Progress",
         "toReview": "To Review",
         "done": "Done",
-        "archive": "Archive"
+        "archived": "Archived"
       }
     },
     "actions": {
