fix(*): toaster reward

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -98,12 +98,6 @@
     "rows": {
       "cancelReward": "Cancel"
     },
-    "rewardsCount": "Rewards",
-    "toast": {
-      "cancelReward": {
-        "success": "Reward canceled successfully.",
-        "error": "Error canceling reward."
-      }
-    }
+    "rewardsCount": "Rewards"
   }
 }
