feat(*): reward modal full page

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -63,7 +63,7 @@
       "languages": "Languages",
       "ecosystems": "Ecosystems",
       "country": "Country",
-      "totalRewardedUsdAmount": "Rewarded amount",
+      "rewardedAmount": "Rewarded amount",
       "actions": {
         "title": "Actions",
         "seeProfile": "See profile",
