fix(*): edit button

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -5,7 +5,7 @@
       "budgetAvailable": "Budget",
       "budgetChart": "Chart",
       "seeTransactions": "See transactions",
-      "modifyProject": "Modify project"
+      "editProject": "Edit project"
     }
   },
   "activity": {
