--- a/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
+++ b/shared/panels/project-update-sidepanel/project-update-sidepanel.en.json
@@ -1,6 +1,6 @@
 {
-  "title": "Modify Project",
-  "submit": "Modify the project",
+  "title": "Edit Project",
+  "submit": "Edit the project",
   "messages": {
     "success": "Project edited successfully.",
     "error": "An error occurred while updating the project."
