add fetch handlers and invoice preview query

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.3.24",
+    "franc": "^6.2.0",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.12.2",
@@ -41,6 +42,7 @@
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
+    "react-pdf": "7.7.1",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.5.0",
