--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
     "react-pdf": "7.7.1",
+    "@react-pdf/renderer": "^3.3.8",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.5.0",
