--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -1,19 +1,9 @@
 {
-  "financial": {
-    "title": "Financial",
-    "buttons": {
-      "budgetAvailable": "Budget",
-      "budgetChart": "Chart",
-      "seeTransactions": "See transactions",
-      "editProject": "Edit project"
-    }
-  },
   "activity": {
-    "title": "Activity",
     "buttons": {
       "contributors": "Contributors",
       "contributions": "Contributions",
-      "rewards": "Rewards"
+      "financial": "Financial"
     },
     "kanban": {
       "columns": {
@@ -25,6 +15,8 @@
       }
     },
     "actions": {
+      "seeTransactions": "See transactions",
+      "editProject": "Edit project",
       "reward": "Reward a contributor"
     }
   },
