--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -62,6 +62,7 @@
         "reward": "Reward"
       }
     },
+    "contributorCount": "Contributors",
     "rows": {
       "languages": "{{count}} languages",
       "ecosystems": "{{count}} ecosystems"
