--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -1,10 +1,10 @@
 {
+  "views": {
+    "contributors": "Contributors",
+    "contributions": "Contributions",
+    "financial": "Financial"
+  },
   "activity": {
-    "buttons": {
-      "contributors": "Contributors",
-      "contributions": "Contributions",
-      "financial": "Financial"
-    },
     "kanban": {
       "columns": {
         "notAssigned": "Not assigned",
