wip: ungrant sidepanel

--- a/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -16,6 +16,7 @@
     },
     "actions": {
       "seeTransactions": "See transactions",
+      "returnFunds": "Return funds",
       "editProject": "Edit project",
       "reward": "Reward a contributor"
     }
