--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@highcharts/map-collection": "^2.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "0.0.0-canary-20241019165916",
+    "@react-pdf/renderer": "^3.3.8",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.3.24",
     "franc": "^6.2.0",
@@ -43,7 +45,6 @@
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
     "react-pdf": "7.7.1",
-    "@react-pdf/renderer": "^3.3.8",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.5.0",
