Refactor Project Recommendation Page and Matching Questions Feature  - Updated ProjectRecommendationPage to use new header tokens for better clarity. - Modified useMatchingQuestions hook to replace algorithm ID and enhance toast notifications with translation support. - Refactored NavigationButtons component to streamline button rendering and added translation tokens for button labels. - Expanded translation files to include success and error messages for answer saving. - Adjusted translation structure to categorize project recommendation details.  These changes improve user experience and maintainability of the project recommendation feature.

--- a/app/project-recommendation/_translations/project-recommendation.en.json
+++ b/app/project-recommendation/_translations/project-recommendation.en.json
@@ -2,5 +2,9 @@
   "header": {
     "title": "Find Your Perfect Project",
     "description": "Answer a few questions to discover projects that match your interests and skills"
+  },
+  "toast": {
+    "success": "Answers saved successfully",
+    "error": "Error saving answers"
   }
 }
