Enhance MatchingQuestions component with loading and empty state handling. Added Skeleton for loading indication and EmptyState component for no questions found scenario. Updated translation file to include empty state messages for better user feedback.

--- a/app/project-recommendation/_translations/project-recommendation.en.json
+++ b/app/project-recommendation/_translations/project-recommendation.en.json
@@ -6,5 +6,11 @@
   "toast": {
     "success": "Answers saved successfully",
     "error": "Error saving answers"
+  },
+  "matching-questions": {
+    "emptyState": {
+      "title": "No questions found",
+      "description": "We couldn't find any questions for you. Please try again later."
+    }
   }
 }
