--- a/app/project-recommendation/_translations/project-recommendation.en.json
+++ b/app/project-recommendation/_translations/project-recommendation.en.json
@@ -2,5 +2,15 @@
   "header": {
     "title": "Find Your Perfect Project",
     "description": "Answer a few questions to discover projects that match your interests and skills"
+  },
+  "toast": {
+    "success": "Answers saved successfully",
+    "error": "Error saving answers"
+  },
+  "matching-questions": {
+    "emptyState": {
+      "title": "No questions found",
+      "description": "We couldn't find any questions for you. Please try again later."
+    }
   }
 }
