Refactor ProjectRecommendationPage and enhance matching questions flow  - Simplified ProjectRecommendationPage by removing unnecessary layout elements, now directly rendering MatchingQuestions. - Integrated useRouter in useMatchingQuestions for improved navigation upon question completion. - Added success and error toast notifications for user feedback during the matching questions process. - Updated translations to include new results section for recommended projects.  This commit streamlines the user experience and enhances the functionality of the project recommendation feature.

--- a/app/project-recommendation/_translations/project-recommendation.en.json
+++ b/app/project-recommendation/_translations/project-recommendation.en.json
@@ -12,5 +12,12 @@
       "title": "No questions found",
       "description": "We couldn't find any questions for you. Please try again later."
     }
+  },
+  "results": {
+    "title": "Recommended projects for you",
+    "emptyState": {
+      "title": "No projects found",
+      "description": "We couldn't find any projects for you. Please try again later."
+    }
   }
 }
