--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.12.2",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "posthog-js": "^1.154.5",
