Enhance Project Overview with Stats and Description Components
- Added Stats and Description components to the Project Overview page for better project insights.
- Updated layout styles in the Navigation and Paper components for improved responsiveness.
- Introduced new translation keys for project overview statistics and description.

--- a/app/projects/_translations/project-details.en.json
+++ b/app/projects/_translations/project-details.en.json
@@ -10,5 +10,16 @@
   },
   "similarProjects": {
     "title": "Similar Projects"
+  },
+  "overview": {
+    "stats": {
+      "contributors": "Contributors",
+      "prMerged": "PR Merged",
+      "stars": "Stars",
+      "issues": "Open Issues"
+    },
+    "description": {
+      "title": "Description"
+    }
   }
 }
