--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ NEXT_PUBLIC_GITHUB_PUBLIC_REPO_SCOPE=
 
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
+
+
+######################################## Local Mock ########################################
+
+NEXT_PUBLIC_ONLYDUST_API_MOCK_BASEPATH=localhost:3100
